# teamspeakBot

./: README.md  roninwashere
TeamspeakBot/: TeamspeakBot.sln
TeamspeakBot/TeamspeakBot/: Program.cs  Startup.cs  TeamspeakBot.csproj  WeatherForecast.cs
TeamspeakBot/TeamspeakBot/Controllers/: WeatherForecastController.cs
TeamspeakBot/TeamspeakBot/Properties/: launchSettings.json
TeamspeakBot/TeamspeakBot/ts3_sdk_3.0.4.4/doc/: LICENSING  changelog_sdk.txt
TeamspeakBot/TeamspeakBot/ts3_sdk_3.0.4.4/examples/client_android/app/src/main/cpp/: CMakeLists.txt
TeamspeakBot/TeamspeakBot/ts3_sdk_3.0.4.4/examples/client_android/app/src/main/cpp/sdkclient/src/: ts3client_wrapper.cpp  ts3client_wrapper.h
TeamspeakBot/TeamspeakBot/ts3_sdk_dotNet_0.2/: LICENSE.md  README.md
TeamspeakBot/TeamspeakBot/ts3_sdk_dotNet_0.2/documentation/: WebKI.xml  WebTOC.xml  index.html  search.html
TeamspeakBot/TeamspeakBot/ts3_sdk_dotNet_0.2/server/: Makefile.linux_amd64  Makefile.linux_x86  Makefile.macosx  Server.vcxproj  id_io.c  id_io.h  main.c  server.sln
TeamspeakBot/TeamspeakBot/ts3_sdk_dotNet_0.2/source/: TeamSpeakException.cs  Vector.cs
TeamspeakBot/ts3_sdk_dotNet_0.2/: README.md
TeamspeakBot/ts3_sdk_dotNet_0.2/documentation/: WebKI.xml  WebTOC.xml  index.html  search.html
TeamspeakBot/ts3_sdk_dotNet_0.2/documentation/fti/: FTI_100.json  FTI_101.json  FTI_102.json  FTI_103.json  FTI_106.json  FTI_108.json  FTI_109.json  FTI_113.json  FTI_114.json  FTI_116.json  FTI_117.json  FTI_119.json  FTI_122.json  FTI_97.json  FTI_99.json
TeamspeakBot/ts3_sdk_dotNet_0.2/documentation/html/: 57ba9e17-48ea-4c78-b951-0cdc5fcbc84c.htm  7bda83ad-356b-4c5f-bf9e-f0f098c65685.htm  E_TeamSpeak_Sdk_Client_Connection_ChannelChanged.htm  E_TeamSpeak_Sdk_Client_Connection_ChannelDeleted.htm  E_TeamSpeak_Sdk_Client_Connection_ChannelDescriptionUpdated.htm  E_TeamSpeak_Sdk_Client_Connection_ChannelMessage.htm  E_TeamSpeak_Sdk_Client_Connection_ChannelMoved.htm  E_TeamSpeak_Sdk_Client_Connection_ChannelPasswordChanged.htm  E_TeamSpeak_Sdk_Client_Connection_ChannelSubscribed.htm  E_TeamSpeak_Sdk_Client_Connection_ChannelSubscribesFinished.htm  E_TeamSpeak_Sdk_Client_Connection_ChannelUnsubscribed.htm  E_TeamSpeak_Sdk_Client_Connection_ChannelUnsubscribesFinished.htm  E_TeamSpeak_Sdk_Client_Connection_CheckServerUniqueIdentifier.htm  E_TeamSpeak_Sdk_Client_Connection_ClientKickedFromChannel.htm  E_TeamSpeak_Sdk_Client_Connection_ClientKickedFromServer.htm  E_TeamSpeak_Sdk_Client_Connection_ClientMessage.htm  E_TeamSpeak_Sdk_Client_Connection_ClientMoved.htm  E_TeamSpeak_Sdk_Client_Connection_ClientMovedSubscription.htm  E_TeamSpeak_Sdk_Client_Connection_ClientTimeout.htm  E_TeamSpeak_Sdk_Client_Connection_ClientUpdated.htm  E_TeamSpeak_Sdk_Client_Connection_Custom3dRolloffCalculationClient.htm  E_TeamSpeak_Sdk_Client_Connection_Custom3dRolloffCalculationWaveReceived.htm  E_TeamSpeak_Sdk_Client_Connection_NewChannel.htm  (+489 more)
TeamspeakBot/ts3_sdk_dotNet_0.2/server/: Makefile.linux_amd64  Makefile.linux_x86  Makefile.macosx  Server.vcxproj  main.c  server.sln
TeamspeakBot/ts3_sdk_dotNet_0.2/source/: TeamSpeak.Sdk.csproj
(+957 files in other folders)
